# Compilador

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  ui_mainwindow.h  ui_virtualmachine.h
Lexico/: teste_10.txt
docs/: exemplo.txt
gui/: compilerGUI.cpp  compilerGUI.h
gui/CodeEditor/: codeeditor.cpp  codeeditor.h
gui/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
libs/: codeGenerator.cpp  codeGenerator.h  invertedTree.h  lexicalAnalyser.cpp  lexicalAnalyser.h  lexical_analiser.cpp  lexical_analiser.h  lexical_analyser.cpp  lexical_analyser.h  linkedList.cpp  linkedList.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  semanticAnalyser.cpp  semanticAnalyser.h  symbolTable.cpp  symbolTable.h  syntacticAnalyser.cpp  syntacticAnalyser.h  utils.cpp  utils.h  virtualMachine.cpp  virtualMachine.h  virtualmachine.cpp  virtualmachine.h  virtualmachine.ui
resources/: tokens.txt
source/: main.cpp
testes/: fat.txt  sin0.txt  teste.txt
testes/finais/: 1.txt  a.txt
testes/finais/certos/: 1.txt  certo2.txt  certo3.txt  certo4.txt  certoCABULOSO.txt
testes/finais/errados/: errado1.txt  errado2.txt  erradoCABULOSO.txt
testes/lexico/: teste_1.txt  teste_10.txt
testes/sintatico/: sint1.txt  sint18.txt  sint19.txt
